--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="1.jpg" alt="Delgerdalai">
+<img src="1.jpg" alt="Delgerdalai" width="150" height="300">
 <ul>
   <li><a href="#home">Home Page</a></li>
   <li><a href="#news">lab1-About me</a></li>
