--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="styleme.css">
+</head>
 <body>
 <img src="1.jpg" alt="Delgerdalai" width="150" height="200">
+<h1>About Delgerdalai Batjargal</h1>
+<p>My name is Delgerdalai and I am <span class="sp">curious</span>, <span class="sp">insightful</span>, and <span class="sp">passionate</span>.</p>
+<br />
+<h1>My Classes This Quarter</h1>
 <ul>
-  <li><a href="#home">Home Page</a></li>
-  <li><a href="#news">lab1-About me</a></li>
-  <li><a href="#contact">lab2</a></li>
-  <li><a href="#about">lab3</a></li>
+  <li><a href="#">Web Application Programming</a></li>
+  <li><a href="#">Modern Web Applications</a></li>
+  <li><a href="#">Algorithms</a></li>
+  <li><a href="#">Enterprise Architecture</a></li>
+</ul>
+
+<br />
+<h1>My Favorite Movies</h1>
+<p>1. Lost<a href="https://www.imdb.com/title/tt0411008/?ref_=hm_stp_fdv_tt_i_4">(IMDB)</a></p>
+<p>2. Chicago Fire<a href="https://www.imdb.com/title/tt2261391/?ref_=hm_stp_fdv_tt_i_1">(IMDB)</a></p>
+<p>3. Spider Man<a href="https://www.imdb.com/title/tt10872600/?ref_=hm_inth_tt_i_2">(IMDB)</a></p>
+
+<br />
+<h1>My Moods</h1>
+Happy:<img src="mood.jpg" alt="">Sad:<img src="mood.jpg" alt="">
+
+<br />
+<h1>Fun Facts About My neighbors</h1>
+<ul>
+  <li>Susan : Meditator</li>
+  <li>Jane : Deep Meditator</li>
 </ul>
 
 
